--- a/ibm-cloud-trigger-template.yaml
+++ b/ibm-cloud-trigger-template.yaml
@@ -1,60 +1,76 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
-  name: sampleapp-build-and-deploy
+  name: ibm-cloud-trigger-template
 spec:
   params:
-  - name: URL
-    description: The repository url to build and deploy.
-  - name: REVISION
+  - name: pipelineName
+    description: The name of the pipeline to be executed
+	default: storm-tracker-application-pipeline	
+  - name: pathToContext
+    description: The path to the build context, used by Kaniko - within the workspace
+	default: .
+  - name: pathToDeploymentFile
+    description: The path to the yaml file describe how to deploy the application. 
+	default: deployment.yaml
+  - name: pathToDockerfile
+    description: The path to the docker image build file
+    default: Dockerfile
+  - name: apiUrl
+    description: The api url for interacting with ibm cloud
+    default: cloud.ibm.com
+  - name: containerRepoUrl
+    description: Base url for container repository
+  - name: containerRepoNamespace
+    description: Namespace where image is located
+  - name: deploymentImage
+    description: Name of image to be deployed
+  - name: imageTag
+    description: Tag of image to be deployed
+  - name: nameOfCluster
+    description: The number of cluster to deploy the image to
+  - name: clusterRegion
+    description: The region where the cluster resides
+  - name: mvnGoals
+    description: The Maven goal(s) to run
+    type: array
+    default: ["package"]
+  - name: gitRepoUrl
+    description: The git repo url to the repository of the application that is being built.
+  - name: commitId
     description: The revision to build and deploy.
-  - name: NAMESPACE
-    description: The namespace is used by OpenShift's internal image registry to store the built image.
-  - name: DEPLOYMENT
-    description: Name of the Deployment and the container name in the Deployment.
-  - name: SERVICE_ACCOUNT
-    description: The ServiceAccount under which to run the Pipeline.
-  - name: API-KEY
-    description: The API-KEY
+  - name: serviceAccountId
+    description: The service account id the pipeline is run under
+  - name: apiKey
+    description: Service Account API KEY for interacting with IBM Cloud
   resourcetemplates:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: sample-build-and-deploy-
+      generateName: $(params.imageName)-build-['devops.cloud.ibm.com/build-number']
     spec:
-      serviceAccountName: $(params.SERVICE_ACCOUNT)
+      serviceAccountName: $(params.serviceAccountId)
       pipelineRef:
-        name: application-pipeline
+        name: $(params.pipelineName)
       resources:
-      - name: source
+      - name: git-repo
         resourceSpec:
           type: git
           params:
           - name: revision
-            value: $(params.REVISION)
+            value: $(params.commitId)
           - name: url
-            value: $(params.URL)
+            value: $(params.repoUrl)
       params:
       - name: DEPLOYMENT
-        value: $(params.DEPLOYMENT)
+        value: $(params.imageName)
   - apiVersion: v1
     stringData:
       username: iamapikey
-      password: $(params.API-KEY)
+      password: $(params.API_KEY)
     kind: Secret
     type: kubernetes.io/basic-auth
     metadata:
       name: ibm-cr-secret
       annotations:
-        tekton.dev/docker-0: us.icr.io
-  - apiVersion: v1
-    kind: PersistentVolumeClaim
-    metadata:
-      name: pipelinerun-$(uid)-pvc
-    spec:
-      resources:
-        requests:
-          storage:  5Gi
-      volumeMode: Filesystem
-      accessModes:
-        - ReadWriteOnce
+        tekton.dev/docker-0: $(params.imageUrl)
