--- a/ibm-cloud-trigger-template.yaml
+++ b/ibm-cloud-trigger-template.yaml
@@ -6,7 +6,7 @@ spec:
   params:
   - name: pipelineName
     description: The name of the pipeline to be executed
-    default: storm-tracker-application-pipeline
+	default: storm-tracker-application-pipeline
   - name: pathToContext
     description: The path to the build context, used by Kaniko - within the workspace
     default: .
@@ -67,7 +67,7 @@ spec:
   - apiVersion: v1
     stringData:
       username: iamapikey
-      password: $(params.API_KEY)
+      password: $(params.apiKey)
     kind: Secret
     type: kubernetes.io/basic-auth
     metadata:
