--- a/ibm-cloud-trigger-template.yaml
+++ b/ibm-cloud-trigger-template.yaml
@@ -43,13 +43,11 @@ spec:
     description: The service account id the pipeline is run under
   - name: apiKey
     description: Service Account API KEY for interacting with IBM Cloud
-  - name: buildNumber
-    default: ['devops.cloud.ibm.com/build-number']
   resourcetemplates:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: $(params.imageName)-build-$(params.buildNumber)
+      generateName: $(params.deploymentImage)-build-
     spec:
       serviceAccountName: $(params.serviceAccountId)
       pipelineRef:
