--- a/build-image-from-source-task.yaml
+++ b/build-image-from-source-task.yaml
@@ -23,6 +23,11 @@ spec:
   steps:
     - name: list-src
       image: alpine
+      env:
+        - name: BUILD_NUMBER
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['devops.cloud.ibm.com/build-number']    
       command:
         - "echo"
       args:
