--- a/ibm-cloud-trigger-template.yaml
+++ b/ibm-cloud-trigger-template.yaml
@@ -100,3 +100,42 @@ spec:
     stringData:
       username: $(params.gitUser)
       password: $(params.gitApiKey)
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: service-account
+secrets:
+- name: ibm-cr-secret
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: kube-api-secret
+  annotations:
+    kubernetes.io/service-account.name: service-account
+    tekton.dev/docker-0: us.icr.io
+type: kubernetes.io/service-account-token
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  namespace: default
+  name: pipeline-role
+rules:
+- apiGroups: ["extensions", "apps", ""]
+  resources: ["services", "deployments", "pods"]
+  verbs: ["get", "create", "update", "patch", "list", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: pipeline-role-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: pipeline-role
+subjects:
+- kind: ServiceAccount
+  name: service-account
+  namespace: default
