--- a/create-ssl-secret-task.yaml
+++ b/create-ssl-secret-task.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: create-ssl-secret-task
+  name: create-ssl-secret
 spec:
   params:
     - name: nameOfCluster
