--- a/create-ssl-secret-task.yaml
+++ b/create-ssl-secret-task.yaml
@@ -11,7 +11,7 @@ spec:
     - name: apiUrl
       description: API URL for interacting with IBM Cloud
   steps:
-    - name: deploy-app
+    - name: create-secret
       image: ibmcom/pipeline-base-image
       env:
         - name: APIKEY
@@ -32,4 +32,4 @@ spec:
           touch root.crt
           echo $CERTIFCATE >> root.crt
           ibmcloud ks cluster config -c $(params.nameOfCluster);
-          kubectl -n kube-system create secret generic postgres-cert --from-file=root.crt
+          kubectl -n default create secret generic postgres-cert --from-file=root.crt
