--- a/service-account.yaml
+++ b/service-account.yaml
@@ -21,7 +21,16 @@ metadata:
   name: pipeline-role
 rules:
 - apiGroups: ["extensions", "apps", ""]
-  resources: ["services", "deployments", "pods", "secrets"]
+  resources: ["services", "deployments", "pods"]
+  verbs: ["get", "create", "update", "patch", "list", "delete"]
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: secret-writer
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
   verbs: ["get", "create", "update", "patch", "list", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -32,6 +41,19 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: pipeline-role
+subjects:
+- kind: ServiceAccount
+  name: service-account
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: pipeline-clusterrole-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: secret-writer
 subjects:
 - kind: ServiceAccount
   name: service-account
