--- a/service-account.yaml
+++ b/service-account.yaml
@@ -52,7 +52,7 @@ metadata:
   name: pipeline-clusterrole-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: secret-writer
 subjects:
 - kind: ServiceAccount
