--- a/create-ssl-secret-task.yaml
+++ b/create-ssl-secret-task.yaml
@@ -14,7 +14,7 @@ spec:
     - name: create-secret
       image: ibmcom/pipeline-base-image
       env:
-        - name: APIKEY
+        - name: IBMCLOUD_API_KEY
           valueFrom:
             secretKeyRef:
               name: secure-properties
@@ -27,7 +27,7 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         - set -e -o pipefail;
-          ibmcloud login -a $(params.apiUrl) -r $(params.clusterRegion) --apikey $APIKEY;
+          ibmcloud login -a $(params.apiUrl) -r $(params.clusterRegion);
           export IKS_BETA_VERSION=1;
           touch root.crt
           echo $CERTIFCATE >> root.crt
