--- a/service-account.yaml
+++ b/service-account.yaml
@@ -21,7 +21,7 @@ metadata:
   name: pipeline-role
 rules:
 - apiGroups: ["extensions", "apps", ""]
-  resources: ["services", "deployments", "pods"]
+  resources: ["secrets", "services", "deployments", "pods"]
   verbs: ["get", "create", "update", "patch", "list", "delete"]
 ---
 kind: ClusterRole
