--- a/service-account.yaml
+++ b/service-account.yaml
@@ -22,7 +22,7 @@ metadata:
 rules:
 - apiGroups: ["extensions", "apps", ""]
   resources: ["secrets", "services", "deployments", "pods"]
-  verbs: ["get", "create", "update", "patch", "list", "delete"]
+  verbs: ["get", "create", "update", "patch", "watch", "list", "delete"]
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -31,7 +31,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get", "create", "update", "patch", "list", "delete"]
+  verbs: ["get", "create", "update", "patch", "watch", "list", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
