--- a/service-account.yaml
+++ b/service-account.yaml
@@ -24,19 +24,21 @@ rules:
   resources: ["secrets", "services", "deployments", "pods"]
   verbs: ["get", "create", "update", "patch", "watch", "list", "delete"]
 ---
-kind: ClusterRole
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: secret-writer
+  namespace: default
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get", "create", "update", "patch", "watch", "list", "delete"]
+  verbs: ["create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: pipeline-role-binding
+  namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -44,17 +46,15 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: service-account
-  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: pipeline-clusterrole-binding
+  name: pipeline-secret-writer-role-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: secret-writer
 subjects:
 - kind: ServiceAccount
   name: service-account
-  namespace: default
