--- a/service-account.yaml
+++ b/service-account.yaml
@@ -23,7 +23,7 @@ rules:
   resources: ["secrets", "services", "deployments", "pods"]
   verbs: ["get", "create", "update", "patch", "watch", "list", "delete"]
 ---
-kind: Role
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: secret-writer
@@ -52,7 +52,7 @@ metadata:
   namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: secret-writer
 subjects:
 - kind: ServiceAccount
