--- a/service-account.yaml
+++ b/service-account.yaml
@@ -30,7 +30,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["create", "update", "patch", "delete"]
+  verbs: ["get", "create", "update", "patch", "watch", "list", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
