--- a/create-ssl-secret-task.yaml
+++ b/create-ssl-secret-task.yaml
@@ -29,7 +29,7 @@ spec:
         - set -e -o pipefail;
           ibmcloud login -a $(params.apiUrl) -r $(params.clusterRegion);
           export IKS_BETA_VERSION=1;
-          touch root.crt
-          echo $CERTIFCATE >> root.crt
+          touch root.crt;
+          echo $CERTIFCATE >> root.crt;
           ibmcloud ks cluster config -c $(params.nameOfCluster);
-          kubectl -n default create secret generic postgres-cert --from-file=root.crt
+          kubectl -n default create secret generic postgres-cert --from-file=root.crt;
