--- a/create-ssl-secret-task.yaml
+++ b/create-ssl-secret-task.yaml
@@ -26,7 +26,7 @@ spec:
               key: postgresCertificate
       command: ["/bin/bash", "-c"]
       args:
-        - set -e -o pipefail;
+        - set -x -e -o pipefail;
           ibmcloud login -a $(params.apiUrl) -r $(params.clusterRegion);
           export IKS_BETA_VERSION=1;
           touch root.crt;
