--- a/service-account.yaml
+++ b/service-account.yaml
@@ -4,12 +4,12 @@ metadata:
   name: service-account
 secrets:
 - name: ibm-cr-secret
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: kube-api-secret
-  annotations:
-    kubernetes.io/service-account.name: service-account
-    tekton.dev/docker-0: us.icr.io
-type: kubernetes.io/service-account-token
+#---
+#apiVersion: v1
+#kind: Secret
+#type: kubernetes.io/service-account-token
+#metadata:
+#  name: kube-api-secret
+#  annotations:
+#    kubernetes.io/service-account.name: service-account
+#    tekton.dev/docker-0: us.icr.io
