--- a/create-ssl-secret-task.yaml
+++ b/create-ssl-secret-task.yaml
@@ -4,12 +4,22 @@ metadata:
   name: create-ssl-secret
 spec:
   params:
-    - name: nameOfCluster
+    - name: name-of-cluster
       description: Name of cluster to deploy image to
-    - name: clusterRegion
+    - name: cluster-region
       description: Region where cluster is located
-    - name: apiUrl
+    - name: api-url
       description: API URL for interacting with IBM Cloud
+      default: cloud.ibm.com
+    - name: cert-secret-key
+      description: Key name for where certificate value is stored in secure-properties in toolchain.
+    - name: cert-file-name
+      description: The name of the file that the cerificate key will be stored in on the k8s cluster
+    - name: cert-secret-name
+      description: The name of the secret on the k8s cluster where the cert file will be stored
+    - name: cluster-namespace
+      description: The namespace on the k8s cluster where to to write the secret to
+      default: default
   steps:
     - name: create-secret
       image: ibmcom/pipeline-base-image
@@ -23,13 +33,13 @@ spec:
           valueFrom:
             secretKeyRef:
               name: secure-properties
-              key: postgresCertificate
+              key: $(params.cert-secret-key)
       command: ["/bin/bash", "-c"]
       args:
         - set -x -e -o pipefail;
-          ibmcloud login -a $(params.apiUrl) -r $(params.clusterRegion);
+          ibmcloud login -a $(params.api-url) -r $(params.cluster-region);
           export IKS_BETA_VERSION=1;
-          touch root.crt;
-          echo $CERTIFCATE >> root.crt;
-          ibmcloud ks cluster config -c $(params.nameOfCluster);
-          kubectl -n default create secret generic postgres-cert --from-file=root.crt;
+          touch $(params.cert-file-name);
+          echo $CERTIFCATE >> $(params.cert-file-name);
+          ibmcloud ks cluster config -c $(params.name-of-cluster);
+          kubectl -n $(params.cluster-namespace) create secret generic $(params.cert-secret-name) --from-file=$(params.cert-file-name);
