--- a/deploy-image-to-ibm-cloud-task.yaml
+++ b/deploy-image-to-ibm-cloud-task.yaml
@@ -3,29 +3,28 @@ kind: Task
 metadata:
   name: deploy-image-to-ibm-cloud
 spec:
-  resources:
-    inputs:
-      - name: git-repo
-        type: git
   params:
-    - name: pathToContext
+    - name: path-to-context
       description: The path to the build context, used by Kaniko - within the workspace
       default: .
-    - name: pathToDeploymentFile
+    - name: path-to-deployment-file
       description: The path to the yaml file to deploy within the git source
-      default: deploy.yaml
-    - name: nameOfCluster
+      default: deployment.yaml
+    - name: name-of-cluster
       description: Name of cluster to deploy image to
-    - name: containerRepoUrl
+    - name: container-repo-url
       description: Base url to the container repo
-    - name: containerRepoNamespace
+    - name: container-repo-namespace
       description: Namespace image is being stored under
-    - name: deploymentImage
+    - name: deployment-image
       description: Name of image to be deployed
-    - name: clusterRegion
+    - name: cluster-region
       description: Region where cluster is located
-    - name: apiUrl
+    - name: api-url
       description: API URL for interacting with IBM Cloud
+      default: cloud.ibm.com
+  workspaces:
+    - name: source
   steps:
     - name: update-yaml
       env:
@@ -33,25 +32,25 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.annotations['devops.cloud.ibm.com/build-number'] 
-      image: alpine
+      image: alpine:3.12
       command: ["sed"]
       args:
         - "-i"
         - "-e"
-        - "s;IMAGE;$(params.containerRepoUrl)/$(params.containerRepoNamespace)/$(params.deploymentImage):$BUILD_NUMBER;g"
-        - "$(resources.inputs.git-repo.path)/$(params.pathToContext)/$(params.pathToDeploymentFile)"
+        - "s;IMAGE;$(params.container-repo-url)/$(params.container-repo-namespace)/$(params.deployment-image):$(BUILD_NUMBER);g"
+        - "$(workspaces.source.path)/$(params.path-to-context)/$(params.path-to-deployment-file)"
     - name: deploy-app
-      image: ibmcom/pipeline-base-image
+      image: ibmcom/pipeline-base-image:2.7
       env:
         - name: IBMCLOUD_API_KEY
           valueFrom:
             secretKeyRef:
               name: secure-properties
-              key: apiKey
+              key: apikey
       command: ["/bin/bash", "-c"]
       args:
         - set -e -o pipefail;
-          ibmcloud login -a $(params.apiUrl) -r $(params.clusterRegion);
+          ibmcloud login -a $(params.api-url) -r $(params.cluster-region);
           export IKS_BETA_VERSION=1;
-          ibmcloud ks cluster config -c $(params.nameOfCluster);
-          kubectl apply -f $(resources.inputs.git-repo.path)/$(params.pathToContext)/$(params.pathToDeploymentFile)
+          ibmcloud ks cluster config -c $(params.name-of-cluster);
+          kubectl apply -f $(workspaces.source.path)/$(params.path-to-context)/$(params.path-to-deployment-file);
