--- a/gitlab-trigger-binding.yaml
+++ b/gitlab-trigger-binding.yaml
@@ -1,10 +1,10 @@
-apiVersion: triggers.tekton.dev/v1beta1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: gitlab-trigger-binding
 spec:
   params:
-  - name: gitRepoUrl
-    value: $(body.project.http_url)
-  - name: commitId
-    value: $(body.checkout_sha)
+  - name: git-repo-url
+    value: $(event.repository.git_http_url)
+  - name: commit-id
+    value: $(event.checkout_sha)
