--- a/gitlab-push-trigger-binding.yaml
+++ b/gitlab-push-trigger-binding.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
-  name: gitlab-trigger-binding
+  name: gitlab-push-trigger-binding
 spec:
   params:
   - name: git-repo-url
