--- a/bind-ibm-service-to-cluster-task.yaml
+++ b/bind-ibm-service-to-cluster-task.yaml
@@ -4,39 +4,30 @@ metadata:
   name: bind-ibm-service-to-cluster
 spec:
   params:
-    - name: name-of-cluster
-      description: Name of cluster to deploy image to
     - name: cluster-region
       description: Region where cluster is located
     - name: api-url
       description: API URL for interacting with IBM Cloud
       default: cloud.ibm.com
-    - name: cert-secret-key
-      description: Key name for where certificate value is stored in secure-properties in toolchain.
-    - name: cert-file-name
-      description: The name of the file that the cerificate key will be stored in on the k8s cluster
-    - name: cert-secret-name
-      description: The name of the secret on the k8s cluster where the cert file will be stored
+    - name: name-of-cluster
+      description: The name of the cluster that the service will be bound to
+    - name: name-of-service
+      description: The name of the service that is being bound to a cluster
     - name: cluster-namespace
-      description: The namespace on the k8s cluster where to to write the secret to
+      description: The namespace on the k8s cluster where the service is being bound to
       default: default
   steps:
-    - name: create-secret
-      image: ibmcom/pipeline-base-image
+    - name: bind-service
+      image: ibmcom/pipeline-base-image:2.7
       env:
         - name: IBMCLOUD_API_KEY
           valueFrom:
             secretKeyRef:
               name: secure-properties
               key: apiKey
-        - name: CERTIFCATE
-          valueFrom:
-            secretKeyRef:
-              name: secure-properties
-              key: $(params.cert-secret-key)
       command: ["/bin/bash", "-c"]
       args:
         - set -x -e -o pipefail;
           ibmcloud login -a $(params.api-url) -r $(params.cluster-region);
           export IKS_BETA_VERSION=1;
-		  ibmcloud ks cluster service bind $(params.name-of-cluster) --service $(params.name-of-service) --namespace $(params.cluster-namespace);
+          ibmcloud ks cluster service bind $(params.name-of-cluster) --service $(params.name-of-service) --namespace $(params.cluster-namespace);
