--- a/create-ssl-secret-task.yaml
+++ b/create-ssl-secret-task.yaml
@@ -22,7 +22,7 @@ spec:
       default: default
   steps:
     - name: create-secret
-      image: ibmcom/pipeline-base-image
+      image: ibmcom/pipeline-base-image:2.7
       env:
         - name: IBMCLOUD_API_KEY
           valueFrom:
