--- a/update-yaml-file-task.yaml
+++ b/update-yaml-file-task.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: update-deployment-yaml
+  name: update-yaml-file
 spec:
   params:
     - name: path-to-context
